Fix: tag and highlight truncation on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -157,6 +157,7 @@ body,
 
 #outer-scroll {
   overscroll-behavior-y: contain;
+  overflow-x: clip;
 }
 
 .scroll-container::-webkit-scrollbar {
@@ -426,6 +427,10 @@ body,
   #root {
     min-height: 100svh;
     overflow-x: hidden;
+  }
+
+  #outer-scroll {
+    overflow-x: clip;
   }
 
   #home {
